@@ -1,6 +1,7 @@
 version 0.32
 	* Add 'SimpleAgenda/Create Task' service
 	* Internal modifications and refactoring
+	* Add Open tasks category to summary view
 
 version 0.31 (2007/11/21)
 	* Bug fixes
